style.css
* {
margin:0;
padding:0;
box-sizing:border-box;
font-family: Arial, sans-serif;
}

body {
background:black url('assets/images/1.jpg') no-repeat center center/cover;
color:white;

}

/* NAV */
.navbar {
position:fixed;
width:100%;
top:0;
display:flex;
justify-content:space-between;
padding:20px 40px;
background:rgba(0,0,0,0.7);
z-index:1000;
}

.navbar a {
color:white;
text-decoration:none;
margin-left:20px;
}

/* HERO */
.hero {
height:100vh;
position:relative;
display:flex;
justify-content:center;
align-items:center;
overflow:hidden;
}

/* DARK OVERLAY */


/* CONTENT */
.hero-content {
position:relative;
z-index:2;
text-align:center;
display:flex;
flex-direction:column;
align-items:center;
gap:4px;

}

/* ?? BIGGER LOGO */
.main-logo {
width:450px;
margin-bottom:5px;
}

/* SECTION TITLES */
.section-title {
margin:5px 0;
font-size:11px;
letter-spacing:2px;
color:#ccc;
}

/* ICONS */
.platform-icons a {
margin:5px;
font-size:20px;
color:white;
transition:0.3s;
}

.platform-icons a:hover {
color:#ccc;
transform:scale(1.2);
}

/* SPONSORS */
.sponsors {
position:absolute;
bottom:10px;
width:100%;
display:flex;
justify-content:space-between;
padding:0 40px;
font-size:11px;
opacity:0.7;
}

.main-logo {
width:450px;
margin-bottom:5px;
}




























.platform-icons,
.section-title {
transform: translateY(-140px);
}

